--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -5,34 +5,12 @@ set-option -g default-terminal "tmux-256color"
 # turn on mouse
 set -g mouse on
 
-# Set status bar
-set-option -g status-left-length 52
-set-option -g status-right-length 451
-set-option -g status-fg white
-set-option -g status-bg colour234
-set-option -g window-status-activity-attr bold
-set-option -g pane-border-fg colour245
-set-option -g pane-active-border-fg colour39
-set-option -g message-fg colour16
-set-option -g message-bg colour221
-set-option -g message-attr bold
-set-option -g status-left '#{prefix_highlight}#[fg=colour235,bg=colour252,bold] ❐ #S #[fg=colour252,bg=colour238,nobold]⮀#[fg=colour245,bg=colour238,bold] #[fg=colour39, bold] λ #[fg=colour238,bg=colour234,nobold]⮀'
-set-option -g window-status-format "#[fg=white,bg=colour234] #I:#W#F  "
-set-option -g window-status-current-format "#[fg=colour234,bg=colour39]⮀#[fg=colour25,bg=colour39,noreverse,bold] #I ⮁ #W#F #[fg=colour39,bg=colour234,nobold]⮀"
-
 set-option -g base-index 1
 set-option -g pane-base-index 1
 set-option -g renumber-windows on
 set-option -g allow-rename on
 # set-option -g pane-border-status top
-# set-option -g pane-border-format " #{page_index} #{pane_current_command} "
-# set-option -g dispay-time 2000
-
-# Set  vi style key bindings in copy and choice modes
-# Pseudo-redundant if $EDITOR=vi
-# set-window-option mode-keys vi
-# 12 hour clock format
-# set-window-option clock-mode-style 12
+set-option -g pane-border-format " #{page_index} #{pane_current_command} "
 
 # Control-b takes my to the last window
 bind-key C-b last-window
@@ -74,5 +52,9 @@ set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-sensible'
 set -g @plugin 'tmux-plugins/tmux-resurrect'
 set -g @plugin 'tmux-plugins/tmux-prefix-highlight'
+
+
+set -g @plugin 'seebi/tmux-colors-solarized'
+set -g @colors-solarized 'dark'
 
 run '~/.tmux/plugins/tpm/tpm'
