comment out `default-terminal`

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -1,6 +1,6 @@
 
 # 256 color terminal
-set-option -g default-terminal "tmux-256color"
+# set-option -g default-terminal "tmux-256color"
 
 # turn on mouse
 set -g mouse on
