removed conflicting binds

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -32,10 +32,6 @@ bind -r k select-pane -U
 bind -r j select-pane -D
 bind -r h select-pane -L
 bind -r l select-pane -R
-bind -r C-k resize-pane -U 3
-bind -r C-j resize-pane -D 3
-bind -r C-h resize-pane -L 8
-bind -r C-l resize-pane -R 8
 
 # Source the tmux.conf file
 bind R source-file ~/.tmux.conf \; display-message "  Config reloaded..."
@@ -52,9 +48,7 @@ set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-sensible'
 set -g @plugin 'tmux-plugins/tmux-resurrect'
 set -g @plugin 'tmux-plugins/tmux-prefix-highlight'
-
-
-set -g @plugin 'seebi/tmux-colors-solarized'
-set -g @colors-solarized 'dark'
+set -g @plugin 'tmux-plugins/tmux-yank'
+set -g @plugin 'Morantron/tmux-fingers'
 
 run '~/.tmux/plugins/tpm/tpm'
