tmux conf changes

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -30,6 +30,17 @@ bind -r j select-pane -D
 bind -r h select-pane -L
 bind -r l select-pane -R
 
+# Status Options
+set-option -g status-justify centre
+set-option -g status-bg black # colour213 #ink
+set-option -g status-fg cyan
+set-option -g status-interval 5
+set-option -g status-left-length 30
+set-option -g status-left '#[fg=magenta]» #[fg=blue,bold]#T#[default]'
+set-option -g status-right '#[fg=red][#(git branch)] #[fg=cyan]»» #[fg=blue,bold]###S #[fg=magenta]%R %m-%d#(acpi | cut -d ',' -f 2)#[default]'
+set-option -g visual-activity on
+
+
 # Source the tmux.conf file
 bind R source-file ~/.tmux.conf \; display-message "  Config reloaded..."
 
