--- a/nvim/coc-settings.json
+++ b/nvim/coc-settings.json
@@ -1,4 +1,12 @@
 {
+    "python.jediEnabled": false,
+    "python.formatting.provider": "black",
+    "python.formatting.blackPath": "/home/bwayne/.local/bin/black",
+    "python.linting.mypyEnabled": false,
+    "python.linting.mypyPath": "/home/bwayne/.local/bin/mypy",
+    "python.linting.pydocstyleEnabled": false,
+    "python.linting.pydocstylePath": "/home/bwayne/.local/bin/pydocstyle",
+    "python.jediPath": "/home/bwayne/.local/lib/python3.6/site-packages/jedi",
     "languageserver": {
         "base": {
             "command": "bash-language-server",
