--- a/nvim/coc-settings.json
+++ b/nvim/coc-settings.json
@@ -14,5 +14,6 @@
         "filetypes": ["sh"],
         "ignoredRootPaths": ["~"]
         }
-    }
+    },
+    "coc.preferences.extensionUpdateCheck": "never"
 }
