--- a/xorg/i3/config
+++ b/xorg/i3/config
@@ -87,10 +87,10 @@ bindsym $mod+Shift+Right move right
 #}}}
 
 # split in horizontal orientation |
-bindsym $mod+h split h
+bindsym $mod+\ split h
 
 # split in vertical orientation -
-bindsym $mod+v split v
+bindsym $mod+- split v
 
 # enter fullscreen mode for the focused container
 bindsym $mod+f fullscreen toggle
