--- a/xorg/i3/config
+++ b/xorg/i3/config
@@ -3,13 +3,15 @@ exec compton
 exec --no-startup-id feh --bg-scale --randomize ~/Images/chromecast1080/*
 
 # no borders
-for_window [class="^.*"] border pixel 0
+for_window [class="^.*"] border pixel 3
 
 # gvim floating window
 for_window [class="Gvim" instance="gvim"] floating enable
-
+for_window [class="yakuake" instance="yakuake"] floating enable
 
 # Set $mod to Left Alt Key
+
+# Mod4 == Windows Key ; Mod1 == Left Alt
 set $mod Mod4
 
 # Left-Alt+, brings up Quick Switch Window
@@ -24,9 +26,8 @@ bindsym $mod+Return exec konsole
 
 
 # Workspaces
-
 set $ws1 "1: "
-set $ws2 "2: "
+set $ws2 "2: "
 set $ws3 "3: "
 set $ws4 "4: "
 set $ws5 "5: "
@@ -36,20 +37,21 @@ set $ws8 "8: "
 set $ws9 "9: "
 set $ws10 "10: "
 
+bindsym $mod+space exec --no-startup-id rofi -show drun -display-drun "" -show-icons
+bindsym $mod+period exec --no-startup-id rofi -show window -display-window "Ω" -show-icons
 
-# Windows {{{
+
+# Windows
 # kill focused window
 bindsym $mod+q kill
 
 bindsym $mod+Tab workspace prev
+bindsym Alt+Tab window prev
 
-bindsym $mod+space exec --no-startup-id rofi -show run -display-run ""
-bindsym $mod+period exec --no-startup-id rofi -show window -display-window ""
-
-bindsym $mod+Control+y	resize shrink width 10 px or 10 ppt
-bindsym $mod+Control+u	resize shrink height 10 px or 10 ppt
-bindsym $mod+Control+i	resize grow height 10 px or 10 ppt
-bindsym $mod+Control+o	resize grow width 10 px or 10 ppt
+# bindsym $mod+Control+y resize shrink width 10 px or 10 ppt
+# bindsym $mod+Control+u resize shrink height 10 px or 10 ppt
+# bindsym $mod+Control+i resize grow height 10 px or 10 ppt
+# bindsym $mod+Control+o resize grow width 10 px or 10 ppt
 
 bindsym $mod+Control+h move left 30
 bindsym $mod+Control+l move right 30
@@ -59,38 +61,38 @@ bindsym $mod+Control+k move up 30
 
 ## FOCUS ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
 
-bindsym $mod+j focus left
+bindsym $mod+h focus left
 bindsym $mod+Left focus left
 
-bindsym $mod+k focus down
+bindsym $mod+j focus down
 bindsym $mod+Down focus down
 
-bindsym $mod+l focus up
+bindsym $mod+k focus up
 bindsym $mod+Up focus up
 
-bindsym $mod+semicolon focus right
+bindsym $mod+l focus right
 bindsym $mod+Right focus right
 
 # MOVE FOCUSED WINDOW ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
-bindsym $mod+Shift+j move left
+bindsym $mod+Shift+h move left
 bindsym $mod+Shift+Left move left
 
-bindsym $mod+Shift+k move down
+bindsym $mod+Shift+j move down
 bindsym $mod+Shift+Down move down
 
-bindsym $mod+Shift+l move up
+bindsym $mod+Shift+k move up
 bindsym $mod+Shift+Up move up
 
-bindsym $mod+Shift+semicolon move right
+bindsym $mod+Shift+l move right
 bindsym $mod+Shift+Right move right
 
 #}}}
 
 # split in horizontal orientation |
-bindsym $mod+\ split h
+bindsym $mod+backslash split h
 
 # split in vertical orientation -
-bindsym $mod+- split v
+bindsym $mod+minus split v
 
 # enter fullscreen mode for the focused container
 bindsym $mod+f fullscreen toggle
@@ -181,6 +183,8 @@ bindsym $mod+r mode "resize"
 # Start i3bar to display a workspace bar (plus the system information i3status
 # finds out, if available)
 bar {
+    # font FiraCode Nerd Font 9
+    # font FiraCode Nerd Font 9
     font pango:Font Awesome 9
     font pango:Font Awesome 9
     position top
