--- a/xorg/i3/i3status/config
+++ b/xorg/i3/i3status/config
@@ -15,18 +15,18 @@ general {
 #order += "ipv4"
 order += "wireless wlp3s0"
 #order += "ethernet enp2s0"
-order += "disk /"
-order += "disk /home"
+#order += "disk /"
+#order += "disk /home"
 #order += "run_watch DHCP"
 #order += "run_watch VPN"
-order += "battery 0"
+#order += "battery 0"
 #order += "load"
-order += "tztime local"
 order += "volume master"
+order += "tztime local"
 
 wireless wlp3s0 {
-        # format_up = " ▲  %essid "
-        format_up = " ▲  %essid %ip (%bitrate %quality) "
+        format_up = " ▲  %essid "
+        #format_up = " ▲  %essid %ip (%bitrate %quality) "
         format_down = " ▼ "
 }
 
@@ -37,8 +37,8 @@ ethernet enp2s0 {
 }
 
 battery 0 {
-        format = " 🔋  %percentage" # %remaining "
-        #format = "BATTERY: %status %percentage %remaining "
+        #format = " 🔋  %percentage" # %remaining "
+        format = "BATTERY: %status %percentage %remaining "
         #path = "/sys/devices/LNXSYSTM:00/device:00/PNP0C0A:00/power_supply/BAT1/uevent"
         #path = "/sys/devices/LNXSYSTM:00/LNXSYBUS:01/uevent
 }
