--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -63,9 +63,9 @@ bind C-c new-session
 bind C-f command-prompt -p find-session 'switch-client -t %%'
 
 # split current window horizontally
-bind - split-window -v
+bind s split-window -v
 # split current window vertically
-bind \ split-window -h
+bind S split-window -h
 
 # pane navigation
 bind -r h select-pane -L  # move left
@@ -161,16 +161,6 @@ bind P choose-buffer # choose which buffer to paste from
 # -- user defined overrides ----------------------------------------------------
 
 if '[ -f ~/.tmux.conf.local ]' 'source ~/.tmux.conf.local'
-# -- plugins ------------------------------------------------------------------
-
-set -g @plugin 'tmux-plugins/tpm'
-set -g @plugin 'tmux-plugins/tmux-sensible'
-set -g @plugin 'tmux-plugins/tmux-resurrect'
-set -g @plugin 'tmux-plugins/tmux-prefix-highlight'
-set -g @plugin 'tmux-plugins/tmux-yank'
-set -g @plugin 'Morantron/tmux-fingers'
-
-run '~/.tmux/plugins/tpm/tpm'
 
 # -- 8< ------------------------------------------------------------------------
 
