--- a/nvim/coc-settings.json
+++ b/nvim/coc-settings.json
@@ -5,22 +5,17 @@
     "python.formatting.blackPath": "/home/bwayne/.local/bin/black",
     "python.jediPath": "/home/bwayne/.local/lib/python3.6/site-packages/jedi",
     "languageserver": {
-        "base": {
+        "bash": {
             "command": "bash-language-server",
-            "args": [
-                "start"
-            ],
-            "filetypes": [
-                "sh"
-            ]
+            "args": [ "start" ],
+            "filetypes": [ "sh" ],
+            "ignoredRootPaths": ["~"]
+        },
+        "fortran": {
+           "command": "/home/bwayne/.local/bin/fortls",
+            "args": ["--lowercase_intrinsics"],
+            "filetypes": ["fortran"],
+            "rootPatterns": [".fortls" , ".git/"]
         }
-    },
-    "languageserver": {
-	    "fortran": {
-	      "command": "/home/bwayne/.local/bin/fortls",
-	      "args": ["--lowercase_intrinsics"],
-	      "filetypes": ["fortran"],
-	      "rootPatterns": [".fortls" , ".git/"]
-	    }
     }
 }
